--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "npm run storybook-static && next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "build-storybook": "build-storybook -o public/ui",
     "icon": "svgr icons -d components/icons --icon --replace-attr-values \"#000=currentColor\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "classnames": "^2.2.6",
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
@@ -27,6 +28,8 @@
     "@storybook/react": "^5.3.19",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-nested": "^4.2.1",
     "style-loader": "^1.2.1"
   }
 }
